--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,11 @@
+html, body{
+ height:100%;
+ padding:0;
+ margin:0;
+}
+ 
+
+
 .typewrite{
   background-color: white;
   text-align: end;
@@ -16,42 +24,38 @@
 
 /*   Page width scaling    */
 
-        @media (max-width:350px @screen-xs-max) {
-        h1 {
-        margin-left:20vw;    
-        margin-top: 200px;
-        font-family: @font-title;
-        letter-spacing: 1.5px;
-        font-weight: 100;
-        font-size: 1.4em;
-          }
-        }
+@media (min-height:50px) and (max-height: 650px) {
+    .overlay a {
+        font-size: 20px
+    }
 
-        @media (min-width:750px @screen-sm-min) and (max-width:950px @screen-sm-max) {
-        h1 {
-        margin-left:20vw;    
-        margin-top: 200px;
-        font-family: @font-title;
-        letter-spacing: 1.5px;
-        font-weight: 100;
-        font-size: 1.4em;
-          }
-        }
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+	
+  html, body{
+   padding:0;
+   margin:0;
+}
+}
 
-        @media (min-width:950px @screen-md-min) and (max-width:1150px @screen-md-max) {
-        h1 {
-        margin-left:15vw;    
-        margin-top: 200px;
-        font-family: @font-title;
-        letter-spacing: 1.5px;
-        font-weight: 100;
-        font-size: 1.4em;
-          }
-        }
+@media (min-height:650px) and (max-height: 950px) {
+    .overlay a {
+        font-size: 20px
+    }
 
-        @media (min-width:1200px @screen-lg-min) {
-  
-        }
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+  html, body{
+   padding:0;
+   margin:0;
+}
+}
 
        
 
@@ -87,6 +91,7 @@
 }
 
 .open-button {
+	border-radius:9px 0px 9px 0px;
     background-color: blue;
     color: white;
     padding: 16px 20px;
@@ -94,7 +99,7 @@
     cursor: pointer;
     opacity: 0.8;
     position: fixed;
-    bottom: 0px;
+    bottom: 5px;
     right: 28px;
     width: 280px;
     margin-top: 95px;
@@ -263,18 +268,6 @@
     top: 20px;
     right: 45px;
     font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-    .overlay a {
-        font-size: 20px
-    }
-
-    .overlay .closebtn {
-        font-size: 40px;
-        top: 15px;
-        right: 35px;
-    }
 }
 
 
